por fin bien hechos

--- a/71.html
+++ b/71.html
@@ -4,10 +4,62 @@
     <head> 
         <meta charset="UTF-8" /> 
         <title>Ejercicio DOM básico</title>
-        <script src="java.js"></script>
 
     </head>
     <body>
+        <script>
+
+
+
+//EJERCICI0 1: Numero de enlaces de la página:
+function ejercicio1(){
+
+
+let enlaces=document.getElementsByTagName('a')
+alert(enlaces.length)
+
+
+}
+
+//EJERCICIO 2: Dirección a la que enlaza el penúltimo enlace
+function ejercicio2(){
+
+var penultimoenlace=[]
+    let enlaces=document.getElementsByTagName('a')
+    for(let i=0;i<enlaces.length-1;i++){
+      
+      penultimoenlace=enlaces[enlaces.length];
+    }
+    console.log(penultimoenlace);
+
+}
+
+
+//EJERCICIO 3: Numero de enlaces que enlazan a http://prueba
+
+function ejercicio3(){
+
+    var enlaces=document.getElementsByTagName('a');
+for(let i=0;i<enlaces.length;i++){
+    if(enlaces[i]=='http://prueba/'){
+        
+    console.log([i].length);
+
+}
+
+}
+
+
+
+
+}
+
+
+
+
+        </script>
+
+        <div id="resultado"></div>
         <p>Lorem ipsum dolor sit amet, <a href="http://prueba">consectetuer adipiscing elit</a>. Sed 
         mattis enim vitae orci. Phasellus libero. Maecenas nisl arcu, consequat congue, commodo nec,
         commodo ultricies, turpis. Quisque sapien nunc, posuere vitae, rutrum et, luctus at, pede.
@@ -38,6 +90,10 @@
         turpis. Mauris mollis est sit amet diam. Curabitur hendrerit, eros quis malesuada tristique,
         ipsum odio euismod tortor, a vestibulum nisl mi at odio. <a href="http://prueba5">Sed non
         lectus non est pellentesque</a> auctor.</p>
+        <article class="grey">
+            <h2>titulo del art</h2>
+            <p>parrafo del art</p>
+        </article>
         <input type="button" value="ejercicio1" onclick="ejercicio1();" />    
         <input type="button" value="ejercicio2" onclick="ejercicio2();" />    
         <input type="button" value="ejercicio3" onclick="ejercicio3();" />    
